# lellostore

./: .dockerignore  Dockerfile  EPIC_01_PLAN.md  EPIC_02_PLAN.md  EPIC_03_PLAN.md  EPIC_04_PLAN.md  EPIC_05_PLAN.md  EPIC_06_PLAN.md  EPIC_07_PLAN.md  IMPLEMENTATION.md  SPEC.md  logo-concepts.html
android/: ANDROID_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/lelloman/store/: ExampleInstrumentedTest.kt  HiltTestRunner.kt
android/app/src/androidTest/java/com/lelloman/store/e2e/: AppDetailE2ETest.kt  CatalogE2ETest.kt  MockServerRule.kt  TestModules.kt  TestServerUrlHolder.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lelloman/store/: LelloStoreApplication.kt  MainActivity.kt
android/app/src/main/java/com/lelloman/store/di/: AppModule.kt
android/app/src/main/java/com/lelloman/store/download/: DownloadManagerImpl.kt
android/app/src/main/java/com/lelloman/store/interactor/: AppDetailInteractorImpl.kt  CatalogInteractorImpl.kt  LoginInteractorImpl.kt  SettingsInteractorImpl.kt  (+1 more)
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-it/: strings.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
android/app/src/test/java/com/lelloman/store/: ExampleUnitTest.kt
android/domain/: build.gradle.kts  consumer-rules.pro
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/localdata/: build.gradle.kts  consumer-rules.pro
android/localdata/schemas/com.lelloman.store.localdata.db.LellostoreDatabase/: 1.json  2.json
android/logger/: build.gradle.kts  consumer-rules.pro
android/remoteapi/: build.gradle.kts  consumer-rules.pro
android/ui/: build.gradle.kts  consumer-rules.pro
android/ui/src/main/res/values/: strings.xml
android/ui/src/main/res/values-it/: strings.xml
backend/: .env.example  .gitignore  Cargo.toml  build.rs
backend/migrations/: 20251218_001_init.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
backend/src/api/: file_response.rs  handlers.rs  mod.rs  routes.rs  static_files.rs
backend/src/auth/: discovery.rs  error.rs  extractors.rs  jwks.rs  middleware.rs  mod.rs  user.rs  validator.rs
backend/src/db/: mod.rs  models.rs
backend/src/services/: aab.rs  apk.rs  mod.rs  storage.rs  upload.rs
backend/tests/: e2e_auth.rs  integration.rs  upload_service.rs
backend/tests/common/: mod.rs
backend/tests/mock_oidc/: mod.rs
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.vue  env.d.ts  main.ts  vite-env.d.ts
frontend/src/components/: AuthenticatedImg.vue  ConfirmDialog.vue  EditAppDialog.vue  ToastContainer.vue  UploadDialog.vue
frontend/src/composables/: useAuthenticatedImage.ts  useToast.ts
frontend/src/composables/__tests__/: useToast.test.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  auth.ts
frontend/src/stores/: apps.ts  auth.ts  index.ts
frontend/src/stores/__tests__/: apps.test.ts
frontend/src/views/: AppDetailView.vue  AppsListView.vue  CallbackView.vue  DashboardView.vue  LoginView.vue
scripts/: publish-to-lellostore.py
(+93 files in other folders)
