[package]
name = "lellostore-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full", "process"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# File handling
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
zip = "2"
image = "0.25"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (Prometheus)
prometheus = "0.13"
lazy_static = "1.4"

# Utilities
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14"
tempfile = "3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
